--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div>
         <h3 class="heading">Front end:</h3>
         <ul>
-          <li>CSS</li>
+          <li>CSS SASS</li>
           <li>Responsive Design</li>
           <li>JavaScript, jQuery</li>
           <li>BootStrap</li>
