Change profile picture

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </h1>
       </div>
       <div class="profile-pic">
-        <img src="/dist/img/c.png" alt="my picture" />
+        <img src="/dist/img/profile.jfif" alt="my picture" />
       </div>
       <div class="summary">
         
