--- a/index.html
+++ b/index.html
@@ -24,15 +24,12 @@
       <div class="summary">
         
         <p>
-          I’m Jay, a 29 years old software developer. I’ve always enjoyed
-          playing with computers since I was little. Not only that, I’m always
-          curious about how software was made. Luckily, one day I found a
-          resource about computer science when I was browsing the web. I started
-          to learn about programming, and it became my passion. I love learning
-          new skills and be better with code every single day.I went from having
-          frustration when facing a problem, to having confidence in solving a
-          problem. My improved ability with code, and the joy of fixing a bug,
-          simply amaze me.
+Hi. I’m Jay, a 29 year-old software developer. I’ve always enjoyed playing with computers, since I was little. I’m
+always curious about how software was made. After graduation, I worked in the restaurant industry for several years. I
+was able to work my way up to the manager position, which was the ceiling. I then decided I wanted to pursue a different
+field. One day I found a resource about computer science when I was browsing the web. I started to learn about
+programming, and it became my passion. I love learning new skills and be a better coder every single day.
+I'm currently learning react and will learn angular next.
         </p>
       </div>
     </div>
