change about me

--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
       <div class="summary">
         
         <p>
-Hi. I’m Jay, a 29 year-old software developer. I’ve always enjoyed playing with computers, since I was little. I’m
-always curious about how software was made. After graduation, I worked in the restaurant industry for several years. I
-was able to work my way up to the manager position, which was the ceiling. I then decided I wanted to pursue a different
-field. One day I found a resource about computer science when I was browsing the web. I started to learn about
-programming, and it became my passion. I love learning new skills and be a better coder every single day.
-I'm currently learning react and will learn angular next.
+        Hi. I'm Jay. I'm a software developer. Coding became my passion because I enjoy problem solving. I also love learning new skills so I can solve real world problem with code.
         </p>
       </div>
     </div>
@@ -38,6 +33,7 @@ I'm currently learning react and will learn angular next.
       <div>
         <h3 class="heading">Front end:</h3>
         <ul>
+          <li>XML</li>
           <li>CSS SASS</li>
           <li>Responsive Design</li>
           <li>JavaScript, jQuery</li>
@@ -48,19 +44,18 @@ I'm currently learning react and will learn angular next.
       <div>
         <h3 class="heading">Back end:</h3>
         <ul>
-          <li>C#</li>
+          <li>Asp.net Core, Asp.net MVC</li>
           <li>Node.js</li>
           <li>Express.js</li>
-          <li>SQL, NoSQL</li>
+          <li>SQL</li>
           <li>REST API</li>
           <li>PHP</li>
-          <li>Python</li>
         </ul>
       </div>
       <div>
         <h3 class="heading">Development skills:</h3>
         <ul>
-          <li>Git</li>
+          <li>Git and Version Control</li>
           <li>Agile Development</li>
           <li>Database Structure Development</li>
           <li>Full Stack Development</li>
